test/positive/feature_publicclasses.java

public class feature_publicclasses {
  public feature_publicclasses() {}
}

