test/negative/ClassesWithSameName/A/A.java
package P;
public class A {
    public A() {}
}
